# sdl-website

./: .gitignore  Caddyfile  README.md  README_zh.md  build.sh  index.html  package-lock.json  package.json  tsconfig.app.json
.github/workflows/: codeql.yml
api/: COPYRIGHT.md  package-lock.json  package.json  tsconfig.json
api/orm/: COPYRIGHT.md  package-lock.json  package.json
api/orm/src/: mikro-orm.config.ts  server.ts
api/orm/temp/: Article.ts.json
api/src/: mikro-orm.config.ts  server.ts
api/src/config/: api-config.ts  paths.ts
api/src/migrations/: Migration20251216091949.ts  Migration20251220020026.ts  Migration20251229114737.ts  Migration20260101091430.ts  Migration20260101091752.ts
api/src/orm/: articles.ts
api/src/routes/: articles.ts
management/: Cargo.toml
management/core/: Cargo.toml
management/core/src/: main.rs  opt.rs
management/core/src/article/: article_import.rs  mod.rs
management/core/src/models/: article.rs  user.rs
management/core/src/orm/: article.rs  connection.rs  mod.rs  user.rs
management/core/src/user/: mod.rs  user_import.rs
management/entity/: Cargo.toml
public/locales/en/: translation.json
public/locales/ja/: translation.json
public/locales/zh-Hant/: translation.json
src/: i18n.ts  main.tsx
src/app/: index.tsx  router.tsx
src/app/routes/: abouts.tsx  all_presentations.tsx  biology.tsx  chemistry.tsx  engineering.tsx  exports.tsx  home.tsx  index.ts  medicine.tsx  (+9 more)
src/config/: paths.ts
webui/: COPYRIGHT.md  README.md  package-lock.json  package.json  vite.config.ts
webui/src/: main.tsx
(+54 files in other folders)
