[package]
name = "sdl-db-management-util"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl-db-management-entity = { path = "../entity" }

anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
dotenv = "0.15.0"
log = "0.4.29"
openssl = "0.10.75"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
nanoid = "0.4.0"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
